--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-camera": "^3.42.0",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-html-parser": "^0.1.0",
     "react-native-image-picker": "^3.1.4",
     "react-native-qrcode-scanner": "^1.5.3",
     "react-native-reanimated": "^1.13.2",
