news scraping #5 > draft ver 0.1

--- a/ios/wg_machipediafujimino/Info.plist
+++ b/ios/wg_machipediafujimino/Info.plist
@@ -40,7 +40,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>To scan QR Codes</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>meiryoUI.ttf</string>
